<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:openDrawer="start"

    >




    <com.sothree.slidinguppanel.SlidingUpPanelLayout
        android:background="@color/white"
        xmlns:sothree="http://schemas.android.com/apk/res-auto"
        android:id="@+id/sliding_layout"
        app:umanoFadeColor="#00FFFFFF"
        app:umanoShadowHeight="0px"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        sothree:umanoPanelHeight="80dp"
        tools:context=".view.MainActivity"
        >




    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <include

            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </include>

        <ProgressBar

            android:visibility="gone"
            android:layout_centerInParent="true"
            android:id="@+id/recycler_progres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </ProgressBar>


        <LinearLayout
            android:id="@+id/linear_layout_radio"
            android:layout_marginTop="34dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView
                android:fontFamily="@font/righteous_regular"
                android:maxLines="1"
                android:text="@string/radio"
                android:textColor="#15202B"
                android:textSize="34sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>




        </LinearLayout>



        <com.google.android.material.tabs.TabLayout
            android:layout_marginStart="25dp"
            android:id="@+id/tabLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="101dp"
            app:tabGravity="start"
            app:tabRippleColor="@color/white"
            app:tabTextColor="#7F909D"
            app:tabIndicator="@drawable/vector"
            app:tabIndicatorColor="@color/green"
            app:tabTextAppearance="@style/tab_text"
            app:tabSelectedTextColor="#15202B"
            >


        </com.google.android.material.tabs.TabLayout>



        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/tabLayout"
            android:layout_marginTop="0dp"
            >

        </androidx.viewpager2.widget.ViewPager2>



    </RelativeLayout>



    <LinearLayout
        android:layout_marginTop="90dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:backgroundTint="#E6ECF0"
            android:id="@+id/player_bottom_bar"
            android:background="@drawable/asd"
            android:ignoreGravity="@id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="88dp">




            <ImageView
                android:id="@+id/radio_avatar"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="24dp"
                android:background="@drawable/image_rectangle2"
                android:scaleType="center"
                android:src="@mipmap/ic_launcher">

            </ImageView>


            <LinearLayout
                android:layout_marginTop="35dp"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@+id/radio_avatar"
                android:layout_marginStart="24dp"
                android:layout_width="wrap_content"
                android:layout_height="175dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/radio_name"
                    android:maxLines="1"
                    android:textColor="#15202B"
                    android:textStyle="bold"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:textSize="14sp"
                    android:text="Test test"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    >

                </TextView>

                <TextView

                    android:textColor="#8899A6"
                    android:fontFamily="@font/poppins_regular"
                    android:textSize="12sp"
                    android:maxLines="1"
                    android:text="@string/durduruldu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

            <LinearLayout

                android:layout_marginStart="285dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:backgroundTint="#8899A6"
                    android:id="@+id/radio_back_button"
                    android:background="@drawable/left"
                    android:layout_width="25dp"
                    android:layout_height="25dp">

                </Button>

                <Button

                    android:backgroundTint="#17BF63"
                    android:id="@+id/radioPlayButton"
                    android:layout_marginStart="13.5dp"
                    android:background="@drawable/play"
                    android:layout_width="35dp"
                    android:layout_height="35dp">

                </Button>

                <Button

                    android:backgroundTint="#8899A6"
                    android:id="@+id/radio_forward_button"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/right"
                    android:layout_width="20dp"
                    android:layout_height="20dp">

                </Button>


                <ProgressBar

                    android:id="@+id/play_progress"

                    android:layout_marginStart="5dp"
                    android:visibility="gone"
                    android:layout_width="35dp"
                    android:layout_height="35dp">

                </ProgressBar>


            </LinearLayout>

        </RelativeLayout>

        <FrameLayout

            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

    </LinearLayout>


</com.sothree.slidinguppanel.SlidingUpPanelLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_header_menu"
        app:insetForeground="@color/white"
        app:itemTextAppearance="@style/tab_text"
        app:itemRippleColor="@color/white"
        app:itemShapeFillColor="@color/white"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/white"
        app:itemHorizontalPadding="24dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/white"
        >


        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="#E1E9ED">

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="350dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/rectangle_4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="24dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/gathername" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="1dp"
                    android:layout_marginTop="24dp"
                    android:fontFamily="@font/poppins_italic"
                    android:text="@string/gather_kesif"
                    android:textAlignment="center"
                    android:textColor="#15202B"
                    android:textSize="35px"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/rectangle_9">

                    <TextView

                        android:id="@+id/gatherDownload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:maxLines="1"
                        android:text="@string/linkGather"
                        android:fontFamily="@font/poppins_regular"
                        android:textAlignment="center"
                        android:textSize="25px"
                        android:textStyle="bold" />

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>



        <LinearLayout
            android:id="@+id/linear_gatherNews"
            android:layout_width="match_parent"
            android:layout_height="2sp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="bottom"
            android:layout_marginEnd="24dp"
            android:background="#E1E9ED"
            android:orientation="horizontal">

        </LinearLayout>



        <TextView
            android:layout_marginEnd="105dp"
            android:maxLines="1"
            android:layout_below="@id/linear_gatherNews"
            android:textSize="10sp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="105dp"
            android:layout_gravity="bottom"
            android:id="@+id/gather_media"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/gather_media"
            android:textColor="#8899A6">


        </TextView>


    </com.google.android.material.navigation.NavigationView>



</androidx.drawerlayout.widget.DrawerLayout>














